# ipygee

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.md  README.rst  example.ipynb  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pypackage_check.yaml  unit.yaml
docs/: conf.py  index.rst  usage.rst
docs/_template/: pypackage-credit.html
docs/usage/plot/: map-featurecollection.ipynb  map-image.ipynb  plot-featurecollection.ipynb  plot-image.ipynb  plot-imagecollection.ipynb
ipygee/: __init__.py  asset.py  decorator.py  ee_feature_collection.py  ee_image.py  ee_image_collection.py  map.py  plotting.py  sidecar.py  task.py  type.py
tests/: conftest.py  test_ipygee.py
