[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipygee"
version = "0.0.0"
description = "widgets to interact with GEE API"
keywords = [
  "skeleton",
  "Python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
  "deprecated>=1.2.14",
  "earthengine-api",
  "ipyvuetify",
  "natsort",
  "sidecar",
  "geemap[core]",
  "bokeh",
  "jupyter_bokeh",
]

[[project.authors]]
name = "Pierrick Rambaud"
email = "pierrick.rambaud49@gmail.com"

[project.license]
text = "MIT"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/gee-community/ipygee"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-deadfixtures",
  "httplib2",
  "pytest-gee",
]
doc = [
  "sphinx>=6.2.1",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-autoapi",
  "jupyter-sphinx",
  "httplib2",
]

[tool.hatch.build.targets.wheel]
only-include = ["ipygee"]

[tool.hatch.envs.default]
dependencies = [
  "pre-commit",
  "commitizen",
  "nox[uv]"
]
post-install-commands = ["pre-commit install"]

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = false
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
    "ipygee/__init__.py:__version__",
    "docs/conf.py:release",
    "CITATION.cff:version"
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
line-length = 105 # small margin for long lines
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "RUF"]
ignore = [
  "E501",  # line too long | Black take care of it
  "D212",  # Multi-line docstring | We use D213
  "D101",  # Missing docstring in public class | We use D106
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"] # Unused import | We use it to expose API extension

[tool.coverage.run]
source = ["ipygee"]

[tool.mypy]
scripts_are_modules = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true

[tool.licensecheck]
using = "PEP631"

[tool.codespell]
skip = "**/*.ipynb,**/*.yml,**/*.svg"
